crates/test-files/fixtures/compile_errors/ambiguous_traits4.fe
trait DoThing {
  fn do();
}

struct Bar {
  pub fn do() {

  }
}

impl DoThing for Bar {
  fn do() {
  }
}

contract Example {
  pub fn run_test(self) {
    Bar::do()
  }
}
